# othello

./: Cargo.toml  README.md
doc/: convert.sh
jupyter/: othello.ipynb
jupyter/.ipynb_checkpoints/: othello-checkpoint.ipynb
python/: test.py
python/latex/: othello_alg.tex
python/othello/: __init__.py  bitboard.py  color.py  coordinate.py  svg_board.py  svg_doc.py
src/: bitboard.rs  board.rs  color.rs  coordinate.rs  direction.rs  lib.rs  main.rs  othello_svg.rs  piece.rs  point.rs  square.rs  svg.rs  svg_board.rs  util.rs
src/board/: bitboard.rs  board.rs  color.rs  coordinate.rs  direction.rs  mod.rs
src/game/: mod.rs  wthor.rs
src/obsolete/: board.rs  coordinate.rs  square.rs
src/svg/: mod.rs  svg_board.rs  svg_doc.rs  vecint64.rs
src/util/: from_vec.rs  mod.rs  othello2svg.rs  read_wthor.rs  wthor2csv.rs
wthor/: wthor_2016.csv
