[package]
name = "othello_game"
version = "0.1.0"
authors = ["dandyvica <dandyvica@gmail.com>"]
edition = "2018"

[dependencies]
unic-char-range = "0.8.0"
byteorder = "1.3.1"

[lib]
name = "othlib"
path = "src/lib.rs"

[[bin]]
name = "othello2svg"
path = "src/util/othello2svg.rs"

[[bin]]
name = "wthor2csv"
path = "src/util/wthor2csv.rs"